# arguable

./: .flake8  README.rst  noxfile.py  pyproject.toml
src/arguable/: __init__.py
tests/: test_base.py  test_parser.py  test_utils.py
