[tool.poetry]
name = "arguable"
version = "0.1.0"
description = "class-level configuration via argparse"
authors = ["Dominik1123 <<>>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Dominik1123/arguable"
repository = "https://github.com/Dominik1123/arguable"
keywords = ["argparse", "configuration"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.1"
flake8 = "^3.8.3"
black = "^19.10b0"
flake8-black = "^0.2.0"
flake8-import-order = "^0.18.1"
mypy = "^0.780"
flake8-docstrings = "^1.5.0"
darglint = "^1.4.1"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["arguable"]

[tool.coverage.report]
show_missing = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
